# Search-Intent

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
config/: api-map.json  auth-inbound.json  cache.json  extractor.json  intent-map.json  project.json  resolver-map.json  search-map.json  search-object-schema.json
plugins/auth/: jwt_auth.py
search_intent/: __init__.py  main.py  models.py  settings.py
search_intent/api/: __init__.py  deps.py  docs.py  routes_generate.py  routes_health.py  routes_parse.py  routes_search.py
search_intent/auth/: __init__.py  base.py  jwt.py  middleware.py
search_intent/cache/: __init__.py  base.py  manager.py  memory_cache.py  redis_cache.py
search_intent/config/: __init__.py  loader.py  validator.py
search_intent/core/: __init__.py  intent_detector.py  normalizer.py  pipeline.py  search_object_builder.py
search_intent/extractors/: __init__.py  base.py  gliner2_extractor.py  regex_extractor.py
search_intent/mappers/: __init__.py  api_mapper.py  executor.py  request_builder.py  template_engine.py
search_intent/plugins/: __init__.py
search_intent/resolvers/: __init__.py  base.py  http_resolver.py  static_resolver.py
tests/: conftest.py  test_api.py  test_pipeline_units.py
